# attendance-nextjs/services/svc-support/src/app/api/v1/support/info/route.ts
@@ -1,0 +1,6 @@
+import { withAdmin, apiOk } from '@attendance/shared'
+import * as svc from '@/modules/support/support.service'
+
+export const GET = withAdmin(async () => {
+  return apiOk(await svc.getSupportInfo())
+})
